# GameTimeTracker

./: CMakeLists.txt  DEPLOY.md  server.py
resources/: resources.qrc
src/: authmanager.cpp  authmanager.h  datamanager.cpp  datamanager.h  gamelistwidget.cpp  gamelistwidget.h  gamemonitor.cpp  gamemonitor.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  statswidget.cpp  statswidget.h  syncmanager.cpp  syncmanager.h
